# email-notify

./: README.md  pyproject.toml
src/email_notify/: __init__.py
